--- a/pages/index/style.css
+++ b/pages/index/style.css
@@ -2,9 +2,8 @@
 .container {
   width: 100%;
   margin-left: auto;
-  margin-right: auto;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  margin-right: auto;padding-left: 0.5rem;
+padding-right: 0.5rem;
 }
 
 /* Globals */
